# besedka

./: .env  .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE.md  Procfile  README.md  build  build-exec  build-frontend  hash_config.rb  release
frontend/: blog-post.html  index.html  package-lock.json  package.json  postcss.config.cjs  signed-mod.html  signed-user.html  vite.config.ts
frontend/src/: app.ts  comment.ts  comments_container.ts  edit_comment_form.ts  main.ts  moderator_controls.ts  new_comment.ts  new_comment_form.ts  types.ts  unreviewed_comments.ts  utils.ts
frontend/src/types/: index.d.ts
frontend/themes/: default.css
frontend/themes/default/: avatar.css  comments.css  controls.css  credits.css  edit_comment.css  login.css  md.css  message.css  modal.css  moderator_controls.css  new_comment.css  preview.css  replies.css  settings.css  unreviewed.css
migrations/: 20221022234315_init.sql  20230216164342_add_title_to_pages.sql
spec/: cli_helper.rb  hash_config.rb  request_helper.rb  runner.rb  spec_helper.rb  utils.rb
spec/api/: approving_comments.rb  config_spec.rb  deleting_comments_spec.rb  editing_comments_spec.rb  listing_comments_spec.rb  listing_replies_spec.rb  login_spec.rb  posting_comments_spec.rb  posting_replies_spec.rb  preview_spec.rb
src/: api.rs  cli.rs  db.rs  lib.rs  main.rs  server.rs
src/api/: comments.rs  error.rs  extractors.rs  login.rs  pages.rs  preview.rs  sites.rs
src/cli/: config.rs  moderators.rs  sites.rs
src/db/: avatars.rs  comments.rs  configs.rs  moderators.rs  pages.rs  sites.rs  users.rs
src/server/: assets.rs
testbed/: blog-post.html  index.html
