[package]
name = "besedka"
description = "A fast, portable, and lightweight commenting system for your website"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["muxcmux <hi@tonkata.com>"]
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive"] }

chrono =  { version = "0.4", features = ["clock", "serde"] }

ring = "0.16"
base64 = "0.21"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

axum = { version = "0.6", features = ["tower-log"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
axum-macros = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# rust-embed = { version = "6", features = ["debug-embed"] }
rust-embed = "6"
mime_guess = "2"
markdown = "1.0.0-alpha.7"
